--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -957,12 +957,29 @@ function closeSidebar(cookie=false,visible=false) {
 	$(".sidebar").fadeOut();
 }
 
-function installPlugin(pluginURL,update=false) {
+function installPlugin(pluginURL,update=false,comment="") {
 	type = update ? "update" : "install";
 	title = update ? "<?tr("Update Plugin")?>" : "<?tr("Install Plugin")?>";
 	closeSidebar(true);
 	disableSearch();
+	if ( $.trim(comment) ) {
+		swal({
+			title: "<?tr("Attention")?>",
+			text: comment,
+			allowOutsideClick: false,
+			showConfirmButton: true,
+			showCancelButton: false,
+			confirmButtonText: "<?tr("OK")?>",
+			animation: false,
+			type: "warning",
+			html: true
+		}, function (isConfirm) {
+			openBox('/plugins/community.applications/scripts/pluginInstall.php&arg1='+type+'&arg2='+pluginURL,title,600,900,true,"OpenSidebarAndRefreshDisplay");
+		});	
+	} else {
 	openBox('/plugins/community.applications/scripts/pluginInstall.php&arg1='+type+'&arg2='+pluginURL,title,600,900,true,"OpenSidebarAndRefreshDisplay");
+	}		
+
 }
 
 function OpenSidebarAndRefreshDisplay() {
