Simpler skinning and card coding

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -226,7 +226,9 @@ $(function(){
 	$(".sidebarClose").on("click",function(e) {
 		closeSidebar();
 	});
-
+	$(".mainArea").on("click",".actionsButtonContext,.actionsButton,.supportButton,.supportButtonCardContext",function() {
+		data.actions = true;
+	});
 	$("#searchBox").keydown(function(e) {
 		if (e.which === 13) {
 			searchBoxAwesomplete.close();
@@ -346,25 +348,29 @@ $(function(){
 		}
 	});
 
-	$("body").on("click",".repoPopup,.ca_repoinfo,.ca_reporeadmore,.ca_repoFromPopUp,.cardDescriptionRepo", function() {
-		var repository = $(this).data("repository");
-		showRepoPopup(repository);
-	});
-
-
-	$('body').on("click",".ca_appPopup,.cardDescription,.homespotlightIconArea",function() {
-		if ( $(this).hasClass("dockerCardBackground") || $(this).hasClass("noClick") )
-			return;
-		if ( $(".dropdown-menu").is(":visible") ) {
-			$(".dropdown-menu").hide();
+	$('body').on("click",".ca_holder",function(event) {
+		if (data.actions) {
+			data.actions = false;
 			return;
 		}
+		data.actions = false;
+		event.stopPropagation();
+		if ( $(this).hasClass("ca_repoPopup") ) {
+			var repository = $(this).data("repository");
+			showRepoPopup(repository);
+		} else {
+			if ( $(this).hasClass("dockerCardBackground") || $(this).hasClass("noClick") )
+				return;
+			if ( $(".dropdown-menu").is(":visible") ) {
+				$(".dropdown-menu").hide();
+				return;
+			}
 
-		var apppath = $(this).data("apppath");
-		var appname = $(this).data("appname");
-		appname = stripTags(appname);
-
-		showSidebarApp(apppath,appname);
+			var apppath = $(this).data("apppath");
+			var appname = $(this).data("appname");
+			appname = stripTags(appname);
+			showSidebarApp(apppath,appname);
+		}
 	});
 
 	$('body').on("click",".dockerPopup", function() {
@@ -1210,6 +1216,7 @@ function pinnedApps() {
 }
 
 function displayTags(leadTemplate,rename=false) {
+	event.stopPropagation();
 	closeSidebar();
 	post({action:'displayTags',leadTemplate:leadTemplate,noSpinner:true,rename:rename},function(result) {
 		disableSearch();
@@ -1898,6 +1905,7 @@ function setFavourite(button) {
 }
 
 function popupInstallXML(xml,type,comment="") {
+	event.stopPropagation();
 	saveState();
 	if ( $.trim(comment) ) {
 		swal({
