--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -355,7 +355,7 @@ $(function(){
 	});
 
 
-	$('body').on("click",".ca_appPopup,.cardDescription,.homespotlightIconArea",function() {
+	$('body').on("click",".ca_appPopup",function() {
 		if ( $(this).hasClass("dockerCardBackground") || $(this).hasClass("noClick") )
 			return;
 		if ( $(".dropdown-menu").is(":visible") ) {
