more port in use stuff

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -1153,7 +1153,10 @@ function uninstallDocker(application,humanName) {
 					$(menuItem).addClass("selectedMenu");
 					$(menuItem).next().show("slow");
 				}
-				previousApps(true,false,data.previousAppsSection);
+				post({action:'getPortsInUse'},function(data) {
+					portsInUse = data.portsInUse;
+					previousApps(true,false,data.previousAppsSection);
+				});
 			});
 		} else {
 			enableSearch();
