--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -168,12 +168,19 @@ var repoBanner = false;
 var repoBannerTimer = false;
 var unRaidFontSize = $("html").css("font-size").replace("px","");
 var resizeTimer;
-//var portsInUse = 123<? echo json_encode(getPortsInUse()); ?>;
 var portsInUse = [];
+
 $(function(){
 	window.onerror = function(msg,url,lineNo,columnNo, error) {
 		post({action:'javascriptError',msg:msg,url:url,lineNo:lineNo,columnNo:columnNo,error:error});
 	}
+
+	// don't run this through the wrapper so that if it hangs up it won't delay anything else
+	$.post("/plugins/<?=$plugin?>/include/exec.php",{action:'getPortsInUse'},function(data) {
+		var ret = JSON.parse(data);
+		portsInUse = ret.portsInUse;
+		console.log("Ports In Use:" + portsInUse);
+	});
 
 	if ( "<?=$killCookie?>" == "true" ) { // This is needed so that if language gets switched on the home page the home page gets regenerated correctly
 		$.cookie("ca_languageSwitch","");
