--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -778,6 +778,7 @@ function updateContent(button) {
 					doSearch(false,startupSearch);
 					populateAutoComplete();
 					startupSearch = "";
+					$(".dockerSearch").hide();
 				} else {
 					getContent(true,'INITIALIZE',"","",startupScreen);
 				}
