--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -892,6 +892,11 @@ function myCloseAlert() {
 	enableSearch();
 }
 
+function doSidebarSearch(newSearch) {
+	closeSidebar();
+	doSearch(false,newSearch);
+}
+
 function doSearch(button,newSearch) {
 	if ( data.searchInProgress )
 		return;
