Fixed: install multi not visible text on RC3+

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -2497,7 +2497,10 @@ function showSidebarApp(apppath,appname) {
 			});
 			postNoSpin({action:'getLastUpdate',ID:result.ID},function(lastUpdate) {
 				if (lastUpdate.lastUpdate) {
-					$("#template"+result.ID).html(lastUpdate.lastUpdate);
+					$("#template"+result.ID).fadeOut("slow","linear",function() {
+						$("#template"+result.ID).html(lastUpdate.lastUpdate);
+						$("#template"+result.ID).fadeIn("slow");
+					});
 				}
 			});
 		})
